--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "expo": "~48.0.18",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
@@ -42,6 +44,8 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-communications": "^2.2.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-chart-kit": "^6.12.0",
@@ -61,6 +65,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^13.4.0",
+    "tailwindcss": "^3.3.2"
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
     "@expo/vector-icons": "^13.0.0",
