--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.5.0",
+    "native-base": "^3.4.28",
     "react-native-screens": "~3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
