--- a/package.json
+++ b/package.json
@@ -9,39 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.3",
+    "@react-navigation/core": "^6.4.9",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
-    "@react-native-async-storage/async-storage": "^1.17.11",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.4.2",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
-    "formik": "^2.4.2",
-    "jsonwebtoken": "^9.0.1",
-    "react-native-date-picker": "^4.2.13",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.5.0",
-    "native-base": "^3.4.28",
     "react-native-screens": "~3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-redux": "^8.1.1",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
+    "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
