--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-native-svg": "^13.4.0",
     "react-native-toast-message": "^2.1.6",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
