--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/core": "^6.4.9",
+
+    "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/datetimepicker": "^6.7.3",
+    "@react-navigation/material-top-tabs": "^6.6.3",
+
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
@@ -31,15 +40,24 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
+
+    "react-native-fab": "^1.0.18",
+
     "react-native-heroicons": "^3.2.0",
     "react-native-modal-datetime-picker": "^17.0.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+
     "react-native-svg": "13.4.0",
     "react-native-toast-message": "^2.1.6",
+
+    "react-native-svg": "^13.4.0",
+    "react-native-tab-view": "^3.5.2",
+
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
