--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-chart-kit": "6.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
