--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+
     "@react-native-async-storage/async-storage": "^1.17.11",
+
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.3",
+
     "@react-navigation/core": "^6.4.9",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -23,7 +27,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
-    "expo-secure-store": "^12.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.1",
@@ -45,8 +49,11 @@
     "react-native-screens": "~3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+
     "react-native-toast-message": "^2.1.6",
+
     "react-native-svg": "^13.4.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
