--- a/package.json
+++ b/package.json
@@ -63,6 +63,23 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/core": "^6.4.9",
+    "@react-navigation/material-top-tabs": "^6.6.3",
+    "lottie-react-native": "^5.1.4",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^5.1.4",
+    "react-native-alert-notification": "^0.3.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-fab": "^1.0.18",
+    "react-native-pager-view": "6.1.2",
+    "react-native-pagination": "^1.5.5",
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-webview": "^13.3.0",
     "react-otp-input": "^3.0.4",
