--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^10.1.0",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "native-base": "^3.4.28",
@@ -36,6 +37,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-alert-notification": "^0.3.4",
     "react-native-communications": "^2.2.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
