--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/core": "^6.4.9",
+    "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/routers": "^6.1.9",
@@ -43,6 +47,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-communications": "^2.2.1",
+    "react-native-chart-kit": "6.12.0",
     "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
@@ -58,13 +63,9 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "13.4.0",
-    "@expo/vector-icons": "^13.0.0",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-navigation/material-top-tabs": "^6.6.3",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.4",
     "react-native-alert-notification": "^0.3.4",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-fab": "^1.0.18",
     "react-native-pager-view": "6.1.2",
     "react-native-pagination": "^1.5.5",
