--- a/package.json
+++ b/package.json
@@ -77,7 +77,29 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-pie-chart": "^3.0.1",
+    "react-native-stopwatch-timer": "^0.0.21",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-wheel-picker": "^1.2.0",
+    "@firebase/auth": "^1.1.0",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-firebase/app": "^18.3.0",
+    "@react-native-firebase/auth": "^18.3.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "expo-firebase-recaptcha": "^2.3.1",
+    "firebase": "^10.1.0",
+    "query-string": "^8.1.0",
+    "react-native-communications": "^2.2.1",
+    "react-native-otp-keyboard": "^1.0.0",
+    "react-native-otp-textinput": "^1.0.1",
+    "react-native-otp-verify": "^1.1.5",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^5.1.4",
+    "react-native-alert-notification": "^0.3.4",
+    "react-native-webview": "^13.3.0",
+    "react-otp-input": "^3.0.4",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
