--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/core": "^6.4.9",
     "@expo/vector-icons": "^13.0.0",
@@ -47,6 +46,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-alert-notification": "^0.3.4",
+    "react-native-chart-kit": "6.12.0",
     "react-native-communications": "^2.2.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
@@ -80,8 +80,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "typescript": "^4.9.4",
-    "react-native-chart-kit": "6.12.0"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
