--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "^6.7.3",
-    "@react-navigation/core": "^6.4.9",
     "@expo/vector-icons": "^13.0.0",
     "@firebase/auth": "^1.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/core": "^6.4.9",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-alert-notification": "^0.3.4",
+    "react-native-calendars": "^1.1300.0",
     "react-native-chart-kit": "6.12.0",
     "react-native-communications": "^2.2.1",
     "react-native-date-picker": "^4.2.13",
