--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "^6.7.3",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/core": "^6.4.9",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -50,6 +53,7 @@
     "react-native-chart-kit": "6.12.0",
     "react-native-communications": "^2.2.1",
     "react-native-date-picker": "^4.2.13",
+    "react-native-drawer-layout": "^3.2.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
@@ -81,7 +85,9 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
