--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "^6.7.3",
-    "@react-navigation/core": "^6.4.9",
     "@expo/vector-icons": "^13.0.0",
     "@firebase/auth": "^1.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -58,6 +55,7 @@
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-fab": "^1.0.18",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-otp-keyboard": "^1.0.0",
@@ -67,7 +65,9 @@
     "react-native-pagination": "^1.5.5",
     "react-native-paper": "^5.9.1",
     "react-native-pie-chart": "^3.0.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-scatter-chart": "^1.0.9",
     "react-native-screens": "~3.20.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
@@ -86,8 +86,7 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "^4.9.4",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4"
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
