--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-fab": "^1.0.18",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-image-picker": "^4.8.5",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-otp-keyboard": "^1.0.0",
     "react-native-otp-textinput": "^1.0.1",
@@ -86,7 +87,8 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "^4.9.4",
-    "victory-native": "^36.6.11"
+    "victory-native": "^36.6.11",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
