--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-firebase-recaptcha": "^2.3.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
@@ -70,6 +71,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-scatter-chart": "^1.0.9",
     "react-native-screens": "~3.20.0",
+    "react-native-search-bar": "^3.5.1",
+    "react-native-search-box": "^0.0.20",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-stopwatch-timer": "^0.0.21",
@@ -87,8 +90,7 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "^4.9.4",
-    "victory-native": "^36.6.11",
-    "expo-image-picker": "~14.1.1"
+    "victory-native": "^36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
