--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "^4.9.4",
-    "victory-native": "^36.6.11"
+    "victory-native": "^36.6.11",
+    "expo-notifications": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
